src/test/ui/default-ty-param-fallback/dont_skip_conflict.stderr
error[E0282]: type annotations needed
  --> $DIR/dont_skip_conflict.rs:27:13
   |
27 |     let x = Opt::Non;
   |         -   ^^^^^^^^ cannot infer type for `T`
   |         |
   |         consider giving `x` a type

error: aborting due to previous error

